# klee-bmc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
.github/workflows/: build_ubuntu.yml  pull_request.yml
lib/: CMakeLists.txt
lib/verifier/klee/: FuzzerRuntime.c  __VERIFIER_assert.c  __VERIFIER_assert_or_assume.c  __VERIFIER_assume.c  __VERIFIER_calloc.c  __VERIFIER_calloc0.c  __VERIFIER_make_nondet.c  __VERIFIER_malloc.c  __VERIFIER_malloc0.c  __VERIFIER_nondet_U16.c  __VERIFIER_nondet_U32.c  __VERIFIER_nondet_U8.c  __VERIFIER_nondet__Bool.c  __VERIFIER_nondet__Bool_named.c  __VERIFIER_nondet_bool.c  __VERIFIER_nondet_bool_named.c  __VERIFIER_nondet_char.c  __VERIFIER_nondet_char_named.c  __VERIFIER_nondet_double.c  __VERIFIER_nondet_double_named.c  __VERIFIER_nondet_float.c  __VERIFIER_nondet_float_named.c  __VERIFIER_nondet_int.c  __VERIFIER_nondet_int_named.c  __VERIFIER_nondet_loff_t.c  __VERIFIER_nondet_loff_t_named.c  __VERIFIER_nondet_long.c  __VERIFIER_nondet_long_named.c  __VERIFIER_nondet_pchar.c  __VERIFIER_nondet_pchar_named.c  __VERIFIER_nondet_pointer.c  __VERIFIER_nondet_pointer_named.c  __VERIFIER_nondet_sector_t.c  __VERIFIER_nondet_sector_t_named.c  __VERIFIER_nondet_short.c  __VERIFIER_nondet_short_named.c  __VERIFIER_nondet_size_t.c  __VERIFIER_nondet_size_t_named.c  __VERIFIER_nondet_u16.c  __VERIFIER_nondet_u32.c  (+14 more)
scripts/: acsl_rewriter.py  build-utils.sh  install-system-deps.sh  install-ubuntu.sh  klee-bmc  ktest_parser.py
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  testing_tool.py
test/ACSL/: array_bug.c  sum03_bug.c
test/Core/: array.c  byte_add_bug.c  ceil_true.c  check_if_bug.c  count_up_down_bug.c  digital-controller.c  dirkex_unsafe.c  empty_reach_error_bug.c  eureka_01_bug.c  eureka_05.c  float14_safe.c  for_bounded_loop1.c  gcd-with-time.c  github_1092.c  github_1092_1_false.c  github_1092_5_false.c  github_1092_6_false.c  invert_string_bug.c  kundu_bug.c  ldv-regression-bug.c  matrix.c  modf_safe.c  pc_sfifo_2_BUG.c  string.c  string_bug.c  sum01_bug.c  sum01_bug02.c  sum01_bug02_base_case.c  sum03_bug.c  sum04.c  sum04_bug.c  sum05_bug.c  sum06_bug.c  sum06_bug02.c  sum06_bug03.c  sum06_bug04.c  terminator_01_bug.c  terminator_02_bug.c  terminator_03_bug.c  terminator_04_bug.c  (+11 more)
test/Future/: deep-nested-simplified_false-unreach-call.c  for_infinite_loop_1.c  github_1092_2_true.c  github_1092_3_true.c  hardware_bug.c  insertion_sort_bug.c  kinductor_01.c  linear_search_bug.c  sum03.c  terminator_01.c  terminator_02.c  terminator_03.c  while_infinite_loop_2.c
transforms/: CMakeLists.txt  CloneMetadata.cpp  InitializeUninitialized.cpp  KInduction.cpp  LibraryFunctions.hpp  Map2CheckLibrary.cpp  Map2CheckLibrary.hpp  ReplaceReachError.cpp
